Починил зависимости для корректной работы Swagger. Убрал лишние неиспользуемые зависимости. Добавил настройки для docker/docker-compose и сохранения jar в корне проекта.